# Rust-training-GRPC-protobuf

./: Cargo.toml  README.md  build.rs
proto/: sensor.proto
src/: client.rs  data_storage.rs  server.rs
tonic_generated/: sensor.rs
