[package]
name = "rust_grpc"
version = "0.1.0"
edition = "2021"
authors = ["Piotr-Skorupa <piotr94skorupa94@gmail.com>"]

[dependencies]
tonic = "0.8.2"
prost = "0.11.2"
tokio = { version = "1.21.2", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = "0.8.2"

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"